--- a/style.css
+++ b/style.css
@@ -1,9 +1,113 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/rubik-wet-paint');
 
 body {
-    background-color: gray;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(19, 25, 34);
+    text-align: center;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+/* ------------ Scroll bar : new design ------------ */
+::-webkit-scrollbar {
+    width: 13px;
+    height: 5px;
+    background: #c1ceff;
+}
+::-webkit-scrollbar-thumb {
+    background: #666666;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #359cf0;
+}
+
+/* ------ adapted for firefox ------ */
+
+@supports (scrollbar-color: red blue) {
+    * {
+        scrollbar-color: #359cf0 #aef1ee;
+        scrollbar-width: thin;
+    }
+
+}
+
+h1 {
+    text-align: center;
+    font-size: 30px;
+    color: #359cf0;
+    font-family: "Poppins",sans-serif;
+    font-weight: 700;
+    margin-bottom: 20px;
 }
 canvas {
-    margin-left: 30%;
-    width: 628px;
-    height: 628px;
+    
+    width: 628;
+    height: 628;
+}
+/* ------ social  ------ */
+
+.social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: -70px;
+}
+
+.social ul {
+    position: relative;
+    display: flex;
+    z-index: 2;
+}
+.social ul li {
+    position: relative;
+    list-style: none;
+    margin: 10px;
+    
+}
+.social ul li a {
+    position: relative;
+    width: 5rem;
+    height: 5rem;
+    line-height: 5rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #359cf0;
+    font-size: 2em;
+    border: 1px solid  rgba(255, 255, 255, 0.40);
+    border-right: 1px solid rgba(255, 255, 255, 0.25);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+    box-shadow: 0 5px 45px rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(2px);
+    transition: 0.6s;
+    overflow: hidden;
+}
+
+.social ul li a:hover {
+    transform: translateY(-20px);
+    color: #fff;
+}
+.social ul li a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    transform: skewX(45deg) translateX(150px);
+    transition: 0.5s;
+}
+.social ul li a:hover::before {
+    transform: skewX(45deg) translateX(-150px);
+    
 }
